fix: serve pfp itself instead of giving the cdn url
